test/typecheck/fail/vector_append_gen2.sail

val forall Nat 'n, Nat 'l, Order 'o, Type 'a, 'l >= 0. (vector<'n,'l,'o,'a>, [|'n:'n + 'l - 1|]) -> 'a effect pure vector_access

val forall Nat 'n1, Nat 'l1, Nat 'n2, Nat 'l2, Order 'o, Type 'a, 'l1 >= 0, 'l2 >= 0.
  (vector<'n1,'l1,'o,'a>, vector<'n2,'l2,'o,'a>) -> vector<'n1,'l1 + 'l2,'o,'a> effect pure vector_append

default Order inc

val forall 'n, 'm. (bit['n], bit['m]) -> bit['n + 'm] effect pure test
    
function forall 'n, 'm. bit['n + 'm] test (v1, v2) =
{
  vector_append(v1, v2);
}